<resources>
    <string name="app_name">SadebUser</string>
    <string name="see_all"><U>See All</U></string>
    <!--    Register-->
    <string name="enter_Name">Enter Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="text_register_no">Enter No</string>
    <string name="text_register_right_no">Please enter a valid mobile number</string>
    <string name="text_register_correct_email">Enter Correct Email</string>
    <string name="text_register_password">Enter Long Password</string>
    <string name="text_register_not_matched">Password Not Matched</string>
    <string name="exist">You Don\'t Exist</string>
    <string name="text_register_term">Accept Term And Condition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="field_required">Field Required</string>
    <string name="title_activity_provicer_all_user">ProvicerAllUserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="card_holder">Card Holder</string>
    <string name="enter_cardholder_name">enter cardholder name</string>
    <string name="enter_date">enter date</string>
    <string name="enter_code">enter code</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="security_code">Security Code</string>
    <string name="card_number">Card Number</string>
    <string name="enter_card_no">enter card no</string>
    <string name="card">Card</string>
    <string name="all_categories">All Categories</string>
    <string name="booking_details">Booking Details</string>
    <string name="services">Services</string>
    <string name="charges">Charges</string>
    <string name="subtotal">SubTotal</string>
    <string name="book">BOOK</string>
    <string name="services_cost">Services Cost</string>
    <string name="tax_10">Tax @ 10 %</string>
    <string name="your_request_is_successfully_sent_to_admin">Your Request is successfully sent to admin</string>
    <string name="wash">Wash</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="no_service_found">No service found</string>
    <string name="there_is_no_provider">There is No Provider</string>
    <string name="choose_card">Choose Card</string>
    <string name="pay_766_86">Pay $766.86</string>
    <string name="password_sent_to_email">Password %1$s sent to your registered email</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_and_will_send_your_instruction_on_how_to_reset_your_password">Enter your email and will send your instruction on How to reset your password</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="invite_your_friends">Invite Your friends</string>
    <string name="refer_friends_to_get_ahed_in_the_n_queu_5_friends">Refer friends to get ahed in the<br /> (queu (5 friends))</string>
    <string name="just_share_this_code_with_your_friends_and_ask_them_to_signup_and_add_this_code_both_of_you_will_get_ahead_of_the_waitlist">Just share this code with your friends and ask them to signup and add this code.Both of you will get ahead of the waitlist.</string>
    <string name="share_code">Share Code</string>
    <string name="skip">Skip</string>
    <string name="wellcome_back_to">WellCome back to</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password_">Forgot Password ?</string>
    <string name="don_t_have_a_account">Don’t have a account ?</string>
    <string name="home">Home</string>
    <string name="my_booking">My Booking</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="near_me">Near me</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="we_have_successfully_sent_password_to_your_nto_your_registered_email">We have successfully sent password to your\nto your registered email</string>
    <string name="go_to_login">go to login</string>
    <string name="payment">Payment</string>
    <string name="credit_card_or_debit">Credit Card Or Debit</string>
    <string name="paypal">Paypal</string>
    <string name="thank_you_for_shopping_using_lafyuu">thank you for shopping using lafyuu</string>
    <string name="back_to_order">Back To Order</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="invite_friends">Invite friends</string>
    <string name="logout">Logout</string>
    <string name="all_providers">All Providers</string>
    <string name="sorry_no_user_found">Sorry,No User found</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the terms and condition</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search_shop">Search Shop</string>
    <string name="no_product_found">No product found</string>
    <string name="gallery">Gallery</string>
    <string name="reviews">Reviews</string>
    <string name="available_time">Available Time</string>
    <string name="today">Today</string>
    <string name="sorry_no_data_found_for_this_date">Sorry, No Data Found for this date</string>
    <string name="appointment_date_amp_time"><![CDATA[Appointment Date & Time]]></string>
    <string name="select_time_availability">Select time availability</string>
    <string name="change_email">Change Email</string>
    <string name="we_will_send_verification_to_your_new_email">we will send verification to your new Email</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="name">Name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="top_category">Top Category</string>
    <string name="my_bookings">My Bookings</string>
    <string name="no_notification_found">No notification found</string>
    <string name="write_your_review">Write your review</string>
    <string name="please_select_option">Please select option :-</string>
    <string name="online">Online</string>
    <string name="book_">Book</string>
    <string name="read_more">Read More</string>
    <string name="add_review">Add review</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="enter_review">Enter Review</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_4_digit_otp">Please enter 4 digit otp</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="please_select_a_provider">Please select a Provider</string>
    <string name="please_select_a_service_user">Please select service user</string>
    <string name="select_date">Select date</string>
    <string name="please_select_time_availability">Please Select Time Availability</string>
    <string name="there_is_no_service">There is No Service</string>
    <string name="provider_name">Provider Name:- %1$s</string>
    <string name="start">start :- %1$s</string>
    <string name="end">end:- %1$s</string>
    <string name="accepted">Accepted</string>
    <string name="remove">Remove</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="home_service">Home service</string>
    <string name="link_sent_to_email">A link has been sent to your email to activate your business account</string>

    <string name="are_you_sure_you_wanted_to_delete">Are you sure, You wanted to delete?</string>
    <string name="no"><font color="black">No</font></string>
    <string name="yes"><font color="black">Yes</font></string>
    <string name="are_you_sure_you_want_to_logout">Are you sure, you want to logout?</string>
    <string name="surname">Surname</string>
    <string name="change_language">Change Language</string>
    <string name="message_active_account">We have sent you a message to activate the account</string>
    <string name="address_">Address: </string>
    <string name="comments">Comments</string>
    <string name="favourite">Favourite</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="permisson_denied">Permission Denied.</string>
</resources>