<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@drawable/gradient"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.ui.activity.AddCardActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp">

        <ImageView
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/backnew"
            android:padding="@dimen/_5sdp"
            android:id="@+id/iv_Back"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp">

        </ImageView>

        <TextView
            android:gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:id="@+id/sihn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/card"
            android:textColor="@color/dark"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            app:cardCornerRadius="10dp"
            android:layout_below="@+id/layout"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/iv_Card_Image"
                android:src="@drawable/creditcard"
                android:layout_width="match_parent"
                android:layout_height="180dp" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/bg_white_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:background="@null"
                android:layout_marginRight="@dimen/_16sdp"
                android:id="@+id/et_Card_No"
                android:layout_marginLeft="@dimen/_12sdp"
                android:padding="@dimen/_5sdp"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_card_no"
                android:textColor="@color/txtgray"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:background="@drawable/bg_white_rectangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:background="@null"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:id="@+id/et_Expiry_Date"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:padding="@dimen/_5sdp"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_date"
                        android:textColor="@color/txtgray"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_white_rectangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:background="@null"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:id="@+id/et_Security_Code"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:padding="@dimen/_5sdp"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/poppins_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_code"
                        android:textColor="@color/txtgray"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_holder"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/bg_white_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:background="@null"
                android:layout_marginRight="@dimen/_16sdp"
                android:id="@+id/et_Card_Holder_Name"
                android:layout_marginLeft="@dimen/_12sdp"
                android:padding="@dimen/_5sdp"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_cardholder_name"
                android:textColor="@color/txtgray"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RR_book"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_14sdp"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </RelativeLayout>




</RelativeLayout>