<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    tools:context=".act.ui.activity.PaymentSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:src="@drawable/greenbgright" />

        <TextView
            android:id="@+id/sihn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/choose_card"
            android:textColor="@color/txt_gr"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/thank_you_for_shopping_using_lafyuu"
            android:textColor="@color/txt_gr"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />


        <TextView
            android:layout_margin="@dimen/_16sdp"
            android:layout_alignParentBottom="true"
            android:id="@+id/tv_Back_Order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_blue_border"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="@dimen/_12sdp"
            android:text="@string/back_to_order"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</RelativeLayout>