<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:background="@drawable/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.notifications.NotificationsFragment">

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp">

                <TextView
                     android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginLeft="@dimen/_22sdp"
                    android:text="@string/account"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RRProfile"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@color/Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:src="@drawable/profile"
                    android:id="@+id/imgFt1"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    >

                </ImageView>

                <TextView
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/imgFt1"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/profile"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RRLanguage"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@color/Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:src="@drawable/logo_one"
                    android:id="@+id/imgFt1sd"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    >

                </ImageView>

                <TextView
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/imgFt1sd"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/change_language"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RRpayment"
                 android:background="@color/white"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/_45sdp">

                <ImageView
                    android:src="@drawable/ic_payment"
                    android:id="@+id/imgFt"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    >

                </ImageView>

                <TextView
                    android:layout_toRightOf="@+id/imgFt"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

</layout>
